// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageButton should be rendered correctly 1`] = `
<div
  className="container uui-button-box uui-enabled root size-36 color-sky fill-solid style-square fill-white size-30"
  href={null}
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
/>
`;

exports[`PageButton should be rendered correctly with extra 1`] = `
<div
  className="container uui-button-box uui-enabled -clickable root size-24 color-sun fill-light style-square fill-light size-24"
  href={null}
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="uui-caption line-height-18 font-size-12 v-padding-2"
  >
    1
  </div>
</div>
`;
